--- a/source/scss/blocks/btn.scss
+++ b/source/scss/blocks/btn.scss
@@ -4,10 +4,13 @@
   line-height: 28px;
   text-transform: uppercase;
   color: #ffffff;
+  border: none;
+  border-radius: 0;
   cursor: pointer;
 
   &:hover {
-    box-shadow: 0 0 0 3px rgba(0,123,255,.25);
+    color: #ffffff;
+    box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.25);
   }
 }
 
@@ -18,8 +21,55 @@
 }
 
 .btn--master,
-.btn--example {
+.btn--portfolio {
 
   @include round-corner($color-green);
+
+}
+
+.btn--green {
+  font-size: 14px;
+  border: 1px solid $color-green;
+  background-color: $color-green;
+  min-width: 160px;
+
+  &:hover {
+    box-shadow: none;
+    border: 1px solid #ffffff;
+  }
+}
+
+.btn--steel {
+  font-size: 15px;
+  line-height: 15px;
+  background-color: $color-steel;
+  min-width: 100px;
+
+
+  &:hover {
+    box-shadow: none;
+    background-color: $color-green;
+  }
+}
+
+.btn--benefits {
+  position: absolute;
+  top: 320px;
+  left: 50%;
+  transform: translateX(-50%);
+
+  font-size: 24px;
+  line-height: 43px;
+  text-transform: none;
+  font-weight: normal;
+
+  @include round-corner($color-steel);
+  filter: drop-shadow(0 12px 0 rgba(0, 0, 0, 0.08));
+
+  & span {
+    font-size: 47px;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
 
 }
