--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -24,8 +24,11 @@ body {
   font-family: "Arsenal", "Arial", sans-serif;
   font-size: 16px;
   line-height: 24px;
-  color: #ffffff;
   margin: 0;
+}
+
+.hidden {
+  display: none;
 }
 
 .container {
@@ -46,5 +49,9 @@ body {
 @import "blocks/btn";
 @import "blocks/contacts";
 @import "blocks/main-nav";
-@import "blocks/exsample";
+@import "blocks/portfolio";
 @import "blocks/slider";
+@import "blocks/benefits";
+@import "blocks/riquest-form";
+@import "blocks/about-company";
+@import "blocks/base-products";
