--- a/source/scss/blocks/base-products.scss
+++ b/source/scss/blocks/base-products.scss
@@ -3,7 +3,7 @@
   background-color: $color-steel;
   background-image:
     url("../../img/bg-rama.png"),
-    url("../../img/triangle-white.png"),
+    url("../../img/triangle-grey.png"),
     url("../../img/bg-products.png");
   background-repeat: no-repeat;
   background-position: center bottom;
