--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -55,3 +55,6 @@ body {
 @import "blocks/riquest-form";
 @import "blocks/about-company";
 @import "blocks/base-products";
+@import "blocks/products";
+@import "blocks/exampls";
+@import "blocks/card";
