--- a/source/scss/blocks/about-company.scss
+++ b/source/scss/blocks/about-company.scss
@@ -1,5 +1,5 @@
 .about-company {
-  background: url("../../img/bg-about-company.png") no-repeat;
+  background: url("../img/bg-about-company.png") no-repeat;
   background-position: bottom;
   background-size: auto;
 }
@@ -42,7 +42,7 @@
     content: "";
     position: absolute;
     left: 15px;
-    background: url(../../img/icon-check.png);
+    background: url(../img/icon-check.png);
     width: 36px;
     height: 35px;
   }
