--- a/source/scss/blocks/card.scss
+++ b/source/scss/blocks/card.scss
@@ -20,7 +20,7 @@
   width: 63px;
   height: 44px;
   margin-right: 2px;
-  background: url("../../img/bg-card-1.1.png") no-repeat;
+  background: url("../img/bg-card-1.1.png") no-repeat;
 
   &:last-of-type {
     margin-right: 0;
