--- a/source/scss/blocks/exampls.scss
+++ b/source/scss/blocks/exampls.scss
@@ -22,7 +22,7 @@
   &:hover {
     box-shadow: none;
     background-color: $color-green;
-    background-image: url(../../img/products-arrow.png);
+    background-image: url(../img/products-arrow.png);
     background-repeat: no-repeat;
     background-position: center right;
   }
