--- a/source/scss/blocks/portfolio.scss
+++ b/source/scss/blocks/portfolio.scss
@@ -1,7 +1,7 @@
 .portfolio {
   position: relative;
   background-color: $color-steel;
-  background-image: url("../../img/fone-example.png");
+  background-image: url("../img/fone-example.png");
   background-repeat: no-repeat;
   background-size: 1920px 270px;
 }
