--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -29,7 +29,7 @@
   right: 25px;
   transform: translateX(-50%);
 
-  background: url(../../img/slider-arrow.png) no-repeat;
+  background: url(../img/slider-arrow.png) no-repeat;
 
   width: 31px;
   height: 16px;
